--- a/review/config.toml
+++ b/review/config.toml
@@ -1,7 +1,7 @@
-description = "auto code repair"
+description = "review"
 
 [completion]
 model_name = "gpt-3.5-turbo"
-max_token = "2048"
+max_token = "1024"
 temperature = 0.0
 stream = false
